--- a/nav.html
+++ b/nav.html
@@ -26,11 +26,11 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
-            <a href="index.html">New</a>
+              <a href="home.html">Home</a>
+            <a href="events.html">New</a>
             <a href="listings.html">Shop all</a>
-            <a href="#about_company">Brands</a>
-            <a href="#about_company">Quizzes</a>
-            <a href="#about_us"> About us </a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
 
         </div>
 
@@ -62,9 +62,10 @@
         <p> <b> phone </b> </p>
         </div>
 
-        <div class="support1"> </div>
+        <div class="support1">
         <p> support@sweetener.com </p>
         <p> (604)-684-3730 </p>
+        </div>
         </div>
         </div>
         </div>
