--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/main.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
@@ -35,16 +36,16 @@
 
     </div>
 
-    <div class="navigation">
-          <nav>
-            <a href="home.html">Home</a>
-            <a href="#about_company">News</a>
-            <a href="listings.html">Shop all</a>
-
-            <a href="about.html"> About us </a>
-            <a href="contact.html">Contact</a>
-          </nav>
-        </div>
+    <script>
+    function myFunction() {
+      var x = document.getElementById("myNav");
+      if (x.className === "navigation") {
+        x.className += " responsive";
+      } else {
+        x.className = "navigation";
+      }
+    }
+    </script>
 
 <div id="onlylargearticles">
   <div class = "largearticle">
