--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <!-- <link href="css/main.css" rel="stylesheet"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+
     <link href="css/main.css" rel="stylesheet">
     <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
@@ -31,12 +31,11 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
-        <a href="index.html">New</a>
-        <a href="listings.html">Shop all</a>
-        <a href="#about_company">Brands</a>
-        <a href="#about_company">Quizzes</a>
-        <a href="#about_us"> About us </a>
-
+  <a href="home.html">Home</a>
+<a href="events.html">New</a>
+<a href="listings.html">Shop all</a>
+<a href="about.html">About Us</a>
+<a href="contact.html">Contact</a>
     </div>
 
     <script>
