--- a/events.html
+++ b/events.html
@@ -6,10 +6,7 @@
   <title>IAT 339 Style Guide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<<<<<<< HEAD
 
-=======
->>>>>>> master
   <link href="css/main.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
@@ -20,7 +17,7 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
-    <a href="index.html">
+    <a href="home.html">
     <h1 class="logo">sweetener</h1>
   </a>
 
