linked proper home page

--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -14,7 +14,9 @@
 <body>
 <header>
 
-  <h1 class="checkoutlogo">sweetener</h1>
+  <a href="home.html">
+  <h1 class="logo">sweetener</h1>
+</a>
 
   </header>
 
