--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
@@ -18,7 +18,9 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
+    <a href="home.html">
     <h1 class="logo">sweetener</h1>
+  </a>
 
     <form action="checkoutV2.html">
         <button class="cart-icon"> 2 </button>
