--- a/product2.html
+++ b/product2.html
@@ -18,7 +18,7 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
-    <a href="index.html">
+    <a href="home.html">
     <h1 class="logo">sweetener</h1>
 </a>
 <form action="checkoutV2.html">
