--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
-    <button class="cart-icon"> 2 </button>
+    <form action="checkoutV2.html">
+        <button class="cart-icon"> 2 </button>
+    </form>
 
 </header>
 
@@ -28,7 +30,7 @@
     <i class="fa fa-bars"></i>
   </a>
           <a href="home.html">Home</a>
-        <a href="events.html">New</a>
+        <a href="events.html">News</a>
         <a href="listings.html">Shop all</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
@@ -53,7 +55,7 @@
 </div>
 <div class="about-info">
 <h1> Hi! Welcome to Sweetener </h1>
-        <p class="about-descr"><em>What does the company do, or offer?</em><br>
+        <p class="about-descr">
         Sweetener is a skincare product retailer which will allow users to purchase different skincare products from different brands on one site.  The website will target a younger audience, such as young adults in their early 20s. The company will become a reliable source of transparent information for skincare advice. This means that the website will clearly state which products would be appropriate or inappropriate for specific skin types instead of promoting and trying to sell everything. Ultimately, this builds trust between the customer and company.Why might this company entice someone to purchase a product or service?
         Through personal filters, customers will be able to easily figure out which products would be suitable for them. For example, a customer can filter products by skin concern such as "acne", "dark spots", or "dry skin".</p>
 
