--- a/article.html
+++ b/article.html
@@ -18,7 +18,7 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
-    <a href="index.html">
+    <a href="home.html">
     <h1 class="logo">sweetener</h1>
   </a>
 
@@ -33,7 +33,7 @@
     <i class="fa fa-bars"></i>
   </a>
           <a href="home.html">Home</a>
-        <a href="events.html">New</a>
+        <a href="events.html">News</a>
         <a href="listings.html">Shop all</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
