--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -9,15 +9,17 @@
   <link href="css/checkoutv2.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
+
 </head>
 
 <body>
 <header>
 
+<div class="checkoutlogo">
   <a href="home.html">
-  <h1 class="logo">sweetener</h1>
+  <h1 class="chekoutlogo">sweetener</h1>
 </a>
-
+</div>
   </header>
 
 
