--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@
     <i class="fa fa-bars"></i>
   </a>
           <a href="home.html">Home</a>
-        <a href="events.html">New</a>
+        <a href="events.html">News</a>
         <a href="listings.html">Shop all</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
