--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/listing.css" rel="stylesheet">
+    <!-- <link href="css/listing.css" rel="stylesheet"> -->
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
@@ -32,7 +32,7 @@
     <i class="fa fa-bars"></i>
   </a>
   <a href="home.html">Home</a>
-<a href="events.html">New</a>
+<a href="events.html">News</a>
 <a href="listings.html">Shop all</a>
 <a href="about.html">About Us</a>
 <a href="contact.html">Contact</a>
