--- a/styleguide.html
+++ b/styleguide.html
@@ -395,9 +395,10 @@
 <p> <b> phone </b> </p>
 </div>
 
-<div class="support1"> </div>
+<div class="support1">
 <p> support@sweetener.com </p>
 <p> (604)-684-3730 </p>
+</div>
 </div>
 </div>
 </div>
