--- a/citations.html
+++ b/citations.html
@@ -12,7 +12,7 @@
 <h1>Citations</h1>
 </header>
 
-<h2>Images</h2>
+<h2>Images and Content</h2>
 <p>https://megpods.blogspot.com/2019/04/review-jolse-sioris-time-is-running-out.html</p>
 <p>https://www.glossier.com/products/futuredew</p>
 <p>https://www.glossier.com/products/milky-jelly-cleanser</p>
